# VideoProcessor

./: .gitignore  CMakeLists.txt  README.md  config_file.txt  sources.txt
VideoProcessor/: CMakeLists.txt
VideoProcessor/include/: Corrector.h  Frame.h  Neighbor.h  VideoProcessor.h
VideoProcessor/src/: Corrector.cpp  Frame.cpp  Neighbor.cpp  VideoProcessor.cpp
src/: CorruptedToCorrected.cpp  UnitTests.cpp
